# dockfra

./: .env.local  .env.production  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  docker-compose.yml  dockfra.yaml  goal.yaml  init.sh  project.functions.toon  pyproject.toml  test_parse.py
.github/workflows/: publish.yml
TODO/: audyt.md  do.md  hybrid.md
app/: docker-compose-production.yml  docker-compose.yml
app/scripts/: generate-developer-keys.sh
app/ssh-developer/: Dockerfile  entrypoint.sh
app/vnc-rpi3/: Dockerfile
comparisons/: README.md  vs-ai-dev-agents.md  vs-coolify.md  vs-kamal.md  vs-multi-agent-frameworks.md  vs-portainer.md
devices/: docker-compose-production.yml  docker-compose.yml
devices/scripts/: deploy.sh  init.sh  setup-keys.sh
devices/ssh-rpi3/: entrypoint-rpi3.sh
devices/web-rpi3/: index.html  nginx.conf
dockfra/: .state.json  README.md  __init__.py  __main__.py  app.py  cli.py  core.py  db.py  discover.py  engines.py  event_bus.py  fixes.py  i18n.py  pipeline.py  pyproject.toml  requirements.txt  steps.py  test_deployers.py  tickets.py
dockfra/deployers/: __init__.py  base.py  (+4 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  PLAN-post-launch-plugins.md  SSH-ROLES.md  WIZARD-API.md
management/: docker-compose-production.yml  docker-compose.yml
scripts/: inject-getv-env.sh  run-tests.sh  setup-dev-tools.sh  setup-github-keys.sh  setup-llm.sh  setup.sh
shared/: Dockerfile.ssh-base  ssh-base-init.sh
ssh-autopilot/: entrypoint.sh
ssh-developer/: entrypoint.sh  motd
ssh-manager/: Dockerfile
ssh-monitor/: entrypoint.sh  monitor-daemon.sh  motd
ssh-rpi3/: Dockerfile
tests/: run-tests.sh  test_e2e.py
vnc-rpi3/: startup.sh
wizard/: .env.example  __init__.py  app.py  cli.py  requirements.txt  run.sh
(+72 files in other folders)
